--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "firebase": "^8.3.0",
     "history": "^4.10.1",
     "moment": "^2.29.1",
@@ -18,10 +19,11 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "validator": "^13.5.2",
+    "vite-plugin-svgr": "^0.3.0",
+    "vite": "^2.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
