--- a/package.json
+++ b/package.json
@@ -7,11 +7,25 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "firebase": "^9.6.0",
+    "history": "^5.1.0",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.44.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.0",
-    "vite": "^2.6.4"
+    "@vitejs/plugin-react": "^1.1.0",
+    "vite": "^2.6.14"
   }
 }
