--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
