--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "firebase": "^9.6.0",
     "history": "^5.1.0",
     "moment": "^2.29.1",
     "node-sass": "^7.0.0",
@@ -53,5 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
