--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "daynal",
+  "name": "daynal.app",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/pickers": "^3.3.10",
-    "firebase": "^9.6.0",
-    "history": "^5.1.0",
-    "moment": "^2.29.1",
-    "node-sass": "^6.0.1",
-    "prop-types": "^15.7.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.6",
+    "@mui/styles": "^5.2.3",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.44.0",
-    "validator": "^13.7.0"
+    "sass": "^1.45.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.1.0",
-    "vite": "^2.6.14"
+    "@vitejs/plugin-react": "^1.0.7",
+    "vite": "^2.7.2"
   }
 }
