--- a/package.json
+++ b/package.json
@@ -7,20 +7,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.6",
-    "@mui/styles": "^5.2.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.45.2"
+    "sass": "^1.45.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
